# kmm

./: .buildinfo  CMakeLists.txt  Makefile  README.md  api.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
.github/workflows/: cmake-cuda-multi-compiler.yml  cmake-hip-multi-compiler.yml  cmake-hip.yml  cmake-multi-compiler.yml
_sources/: api.rst.txt  install.rst.txt
_sources/api/: Array.rst.txt  Bounds.rst.txt  DeviceId.rst.txt  Dim.rst.txt  Domain.rst.txt  EventId.rst.txt  GPUKernel.rst.txt  GPUSubview.rst.txt  GPUSubviewMut.rst.txt  Host.rst.txt  MemoryId.rst.txt  Range.rst.txt  Reduction.rst.txt  ResourceId.rst.txt  Runtime.rst.txt  RuntimeConfig.rst.txt  RuntimeHandle.rst.txt  SystemInfo.rst.txt  TileDomain.rst.txt  View.rst.txt  bounds.rst.txt  boundsDomain.rst.txt  make_runtime.rst.txt  reduce.rst.txt  write.rst.txt
api/: Array.html  Bounds.html  DeviceId.html  Dim.html  Domain.html  EventId.html  GPUKernel.html  GPUSubview.html  GPUSubviewMut.html  Host.html  MemoryId.html  Range.html  Reduction.html  ResourceId.html  Runtime.html  RuntimeConfig.html  RuntimeHandle.html  SystemInfo.html  TileDomain.html  View.html  bounds.html  boundsDomain.html  build_runtime.html  make_runtime.html  reduce.html  write.html
benchmarks/: CMakeLists.txt  vector_add.cu
docs/: build_api.py  conf.py  index.rst
examples/: CMakeLists.txt  cpp_threads_vector_add.cu  histogram.cu  matrix_multiply.cu  point_in_poly.cu  reduction.cu  structs.cu  vector_add.cu
include/kmm/: kmm.hpp
src/allocators/: base.cpp  block.cpp  caching.cpp  device.cpp  system.cpp
src/api/: array_builder.cpp  array_handle.cpp  array_instance.cpp  mapper.cpp  partition.cpp  runtime.cpp  runtime_handle.cpp
src/core/: backends.cpp  config.cpp  data_type.cpp  distribution.cpp  domain.cpp  execution_context.cpp  system_info.cpp
src/dag/: array_builder.cpp  array_planner.cpp  data_distribution.cpp  dist_data_planner.cpp  dist_reduction_planner.cpp  distribution.cpp  domain.cpp  domain_distribution.cpp  reduction_builder.cpp  reduction_planner.cpp  task_graph.cpp  (+1 more)
test/: CMakeLists.txt
(+146 files in other folders)
