add_executable(vector_add_bench ${PROJECT_SOURCE_DIR}/benchmarks/vector_add.cu)
if(KMM_USE_HIP)
    set_source_files_properties(${PROJECT_SOURCE_DIR}/benchmarks/vector_add.cu PROPERTIES LANGUAGE HIP)
endif()
target_compile_features(vector_add_bench PRIVATE cxx_std_17)
target_link_libraries(vector_add_bench PRIVATE kmm)
